--- a/server/.gitignore
+++ b/server/.gitignore
@@ -39,7 +39,6 @@ build/Release
 
 # Dependency directories
 node_modules/
-build/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -70,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-server/.env
+.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
